--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,5 @@ project(ds_codes C)
 set(CMAKE_C_STANDARD 17)
 
 add_executable(ds_codes sorting/merge_sort.c
-        sorting/quick-sort-recursive.c)
+        sorting/quick-sort-recursive.c
+        sorting/bubble-sort.c)
