--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ add_executable(ds_codes sorting/merge_sort.c
         sorting/quick-sort-recursive.c
         sorting/bubble-sort.c
         linked-list/doubly-linked-list.c
-        arrays/arrays.c)
+        arrays/arrays.c
+        arrays/arrya-stack.c)
+add_executable(new_target arrays/arrya-stack.c)
