--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,5 +9,6 @@ add_executable(ds_codes sorting/merge_sort.c
         linked-list/doubly-linked-list.c
         arrays/arrays.c
         arrays/arrya-stack.c
-        queue/queue.c)
+        queue/queue.c
+        queue/deque.c)
 add_executable(new_target arrays/arrya-stack.c)
