--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,6 @@ add_executable(ds_codes sorting/merge_sort.c
         arrays/postfix.c
         arrays/paranthesis-balancing.c
         arrays/tower-of-hanoi.c
-        queue/circular-queue.c)
+        queue/circular-queue.c
+        stack/string-implementation.c)
 add_executable(new_target arrays/array-stack.c)
