--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,5 +30,6 @@ add_executable(ds_codes sorting/merge_sort.c
         arrays/tower-of-hanoi.c
         queue/circular-queue.c
         stack/string-implementation.c
-        sorting/insertion-sort.c)
+        sorting/insertion-sort.c
+        sorting/selection-sort.c)
 add_executable(new_target arrays/array-stack.c)
